--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     }
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1613647907.37b1156",
     "@nuxtjs/axios": "^5.12.5",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
